crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/partial-application.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
// https://babeljs.io/docs/en/babel-plugin-proposal-partial-application

function add(x, y) { return x + y; }

const addOne = add(1, ?); // apply from the left
addOne(2); // 3

const addTen = add(?, 10); // apply from the right
addTen(2); // 12

let newScore = player.score
  |> add(7, ?)
  |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.

f(x, ?)           // partial application from left
f(?, x)           // partial application from right
f(?, x, ?)        // partial application for any arg
o.f(x, ?)         // partial application from left
o.f(?, x)         // partial application from right
o.f(?, x, ?)      // partial application for any arg
super.f(?)        // partial application allowed for call on |SuperProperty|
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -10,7 +10,9 @@
 const addTen = add(?, 10); // apply from the right
 addTen(2); // 12
 
-let newScore = player.score |> add(7, ?) |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.
+let newScore = player.score
+  |> add(7, ?)
+  |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.
 
 f(x, ?); // partial application from left
 f(?, x); // partial application from right
```

# Output

```js
// https://babeljs.io/docs/en/babel-plugin-proposal-partial-application

function add(x, y) {
  return x + y;
}

const addOne = add(1, ?); // apply from the left
addOne(2); // 3

const addTen = add(?, 10); // apply from the right
addTen(2); // 12

let newScore = player.score
  |> add(7, ?)
  |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.

f(x, ?); // partial application from left
f(?, x); // partial application from right
f(?, x, ?); // partial application for any arg
o.f(x, ?); // partial application from left
o.f(?, x); // partial application from right
o.f(?, x, ?); // partial application for any arg
super.f(?); // partial application allowed for call on |SuperProperty|
```


# Errors
```
error[SyntaxError]: expected an expression but instead found '?'
  ┌─ partial-application.js:5:23
  │
5 │ const addOne = add(1, ?); // apply from the left
  │                       ^ Expected an expression here

error[SyntaxError]: expected an expression but instead found '?, 10'
  ┌─ partial-application.js:8:20
  │
8 │ const addTen = add(?, 10); // apply from the right
  │                    ^^^^^ Expected an expression here

error[SyntaxError]: Expected an expression for the left hand side of the `>` operator.
   ┌─ partial-application.js:12:4
   │
12 │   |> add(7, ?)
   │    ^ This operator requires a left hand side value

error[SyntaxError]: expected an expression but instead found '?'
   ┌─ partial-application.js:12:13
   │
12 │   |> add(7, ?)
   │             ^ Expected an expression here

error[SyntaxError]: Expected an expression for the left hand side of the `>` operator.
   ┌─ partial-application.js:13:4
   │
13 │   |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.
   │    ^ This operator requires a left hand side value

error[SyntaxError]: expected an expression but instead found '?'
   ┌─ partial-application.js:13:20
   │
13 │   |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.
   │                    ^ Expected an expression here

error[SyntaxError]: expected an expression but instead found '?'
   ┌─ partial-application.js:15:6
   │
15 │ f(x, ?)           // partial application from left
   │      ^ Expected an expression here

error[SyntaxError]: expected an expression but instead found '?, x'
   ┌─ partial-application.js:16:3
   │
16 │ f(?, x)           // partial application from right
   │   ^^^^ Expected an expression here

error[SyntaxError]: expected an expression but instead found '?, x, ?'
   ┌─ partial-application.js:17:3
   │
17 │ f(?, x, ?)        // partial application for any arg
   │   ^^^^^^^ Expected an expression here

error[SyntaxError]: expected an expression but instead found '?'
   ┌─ partial-application.js:18:8
   │
18 │ o.f(x, ?)         // partial application from left
   │        ^ Expected an expression here

error[SyntaxError]: expected an expression but instead found '?, x'
   ┌─ partial-application.js:19:5
   │
19 │ o.f(?, x)         // partial application from right
   │     ^^^^ Expected an expression here

error[SyntaxError]: expected an expression but instead found '?, x, ?'
   ┌─ partial-application.js:20:5
   │
20 │ o.f(?, x, ?)      // partial application for any arg
   │     ^^^^^^^ Expected an expression here

error[SyntaxError]: expected an expression but instead found '?'
   ┌─ partial-application.js:21:9
   │
21 │ super.f(?)        // partial application allowed for call on |SuperProperty|
   │         ^ Expected an expression here


```

# Lines exceeding max width of 80 characters
```
   15:   |> clamp(0, 100, ?); // shallow stack, the pipe to `clamp` is the same frame as the pipe to `add`.
```

